<resources>
    <string name="app_name">Mobilenik</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="itemRecipeImage_CD">Recipe Image</string>
    <string name="time">Time:</string>
    <string name="difficulty_level">Difficulty Level:</string>
    <string name="proteins">Proteins</string>
    <string name="fats">Fats</string>
    <string name="carbos">Carbos</string>
    <string name="calories">Calories</string>
</resources>